[doc] extending readme

--- a/README
+++ b/README
@@ -5,3 +5,17 @@ DEPENDENCIES:
  * python feedparser - http://www.feedparser.org/
  * jquery - http://jquery.com/
 
+f33dme is free software: you can redistribute it and/or modify
+it under the terms of the GNU Affero General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+f33dme is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU Affero General Public License for more details.
+
+You should have received a copy of the GNU Affero General Public License
+along with f33dme. If not, see <http://www.gnu.org/licenses/>.
+
+(C) 2011- by Adam Tauber, <asciimoo@gmail.com>
